# WorkMate_Test

./: .env-example  Dockerfile  README.md  alembic.ini  dev.yml  pyproject.toml  test.yml  test_data.json
app/application/: exceptions.py  main.py  schemas.py
app/application/api/breeds/: di.py  router.py
app/application/api/cat/: router.py
app/application/api/cats/: di.py  router.py
app/domain/: entities.py  exceptions.py
app/infra/: config.py
app/infra/db/: conn.py  models.py
app/infra/db/repo/: base.py  breeds.py  cats.py  exceptions.py
app/infra/migrations/: env.py
app/infra/migrations/versions/: 18ffb526e850_edit_models.py  39b10a36fd83_temp.py  567ca8b03b5b_create_base_models.py  599a3d4bdd57_change_int_id_to_uuid.py
app/logic/breeds/: command.py  query.py
app/logic/cats/: command.py  query.py
app/tests/unit_tests/: entities_test.py  logic_test.py  mock.py
