[tool.poetry]
name = "workmate-test"
version = "0.1.0"
description = ""
authors = ["xnxq1 <xnxq1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
sqlalchemy = "^2.0.35"
pydantic = "^2.9.2"
asyncpg = "^0.29.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
